<resources>
    <string name="search_all_hint">Enter your destination</string>
    <string name="fly_from_TEMPLATE">Fly from %1$s</string>
    <string name="Fly_from_dot_dot_dot">Fly from…</string>
    <string name="select_dates_proper_case">Select dates</string>
    <string name="hotels_tonight">Hotels tonight</string>
    <string name="missing_flight_info_message_TEMPLATE">To browse flights to %s, tell us where you\'re flying from.</string>
    <string name="missing_flight_trip_date_message">Please select a valid date or date range.</string>
    <string name="missing_dates_flight_TEMPLATE">To browse flights to %s,\ntell us when you\'d like to fly.</string>
    <string name="flight_trends_missing_origin">For flight price trends,\ntell us where you\'re flying from.</string>
    <string name="trip_starts">Trip starts</string>
    <string name="trip_ends">Trip ends</string>
    <string name="trip_end_optional">Optional</string>
    <string name="missing_flight_info_button_prompt">Select Airport</string>
    <string name="Sort_and_Filter">Sort &amp; Filter</string>
    <string name="Done">Done</string>
    <plurals name="x_Hotels_TEMPLATE">
        <item quantity="zero">%s Hotels</item>
        <item quantity="one">%s Hotel</item>
        <item quantity="two">%s Hotels</item>
        <item quantity="few">%s Hotels</item>
        <item quantity="many">%s Hotels</item>
        <item quantity="other">%s Hotels</item>
    </plurals>
    <plurals name="x_of_y_Hotels_TEMPLATE">
        <item quantity="zero">%1$s of %2$s Hotels</item>
        <item quantity="one">%1$s of %2$s Hotel</item>
        <item quantity="two">%1$s of %2$s Hotels</item>
        <item quantity="few">%1$s of %2$s Hotels</item>
        <item quantity="many">%1$s of %2$s Hotels</item>
        <item quantity="other">%1$s of %2$s Hotels</item>
    </plurals>
    <plurals name="of_y_hotels_TEMPLATE">
        <item quantity="zero">of %s hotels</item>
        <item quantity="one">of %s hotel</item>
        <item quantity="two">of %s hotels</item>
        <item quantity="few">of %s hotels</item>
        <item quantity="many">of %s hotels</item>
        <item quantity="other">of %s hotels</item>
    </plurals>
    <plurals name="x_Flights_TEMPLATE">
        <item quantity="zero">%s Flights</item>
        <item quantity="one">%s Flight</item>
        <item quantity="two">%s Flights</item>
        <item quantity="few">%s Flights</item>
        <item quantity="many">%s Flights</item>
        <item quantity="other">%s Flights</item>
    </plurals>
    <plurals name="x_Return_Flights_TEMPLATE">
        <item quantity="zero">%s Return Flights</item>
        <item quantity="one">%s Return Flight</item>
        <item quantity="two">%s Return Flights</item>
        <item quantity="few">%s Return Flights</item>
        <item quantity="many">%s Return Flights</item>
        <item quantity="other">%s Return Flights</item>
    </plurals>
    <string name="trip_empty">Your trip is empty.</string>
    <string name="trip_bucket_book_flight">Book Flight</string>
    <string name="trip_bucket_book_hotel">Book Hotel</string>
    <string name="trip_bucket_sold_out">Sold Out</string>
    <string name="trip_bucket_expired">Expired</string>
    <string name="trip_bucket_label_flight_roundtrip">Round Trip Flight to %1$s</string>
    <string name="trip_bucket_label_flight_trip">Flight to %1$s</string>
    <string name="flight_trends">Flight trends</string>
    <string name="when_to_return">When to return</string>
    <string name="tablet_search_results_hotels_unavailable">Sorry, no hotels are \n currently available.</string>
    <string name="tablet_search_results_hotels_unavailable_tonight">Sorry, no hotels are \n available for tonight.</string>
    <string name="tablet_search_results_flights_unavailable">Sorry, no flights are \n currently available.</string>
    <string name="tablet_tripbucket_item_removed">Removed</string>
    <plurals name="items_in_trip">
        <item quantity="zero">Items in Trip</item>
        <item quantity="one">Item in Trip</item>
        <item quantity="two">Items in Trip</item>
        <item quantity="few">Items in Trip</item>
        <item quantity="many">Items in Trip</item>
        <item quantity="other">Items in Trip</item>
    </plurals>
    <string name="Sort_By">Sort By</string>
    <string name="Filters">Filters</string>
    <string name="Areas">Areas</string>
    <string name="Other_Areas">Other Areas</string>
    <string name="popular">popular</string>
    <string name="price">price</string>
    <string name="rating">rating</string>
    <string name="distance">distance</string>
    <string name="discounts">discounts</string>
    <string name="cd_sort_by_popular">Press to sort by the most popular hotels.</string>
    <string name="cd_sort_by_price">Press to sort by the least expensive hotels.</string>
    <string name="cd_sort_by_rating">Press to sort by the most highly rated hotels.</string>
    <string name="cd_sort_by_distance">Press to sort by the closest hotels.</string>
    <string name="From_x_TEMPLATE">From %s</string>
    <string name="infants_in_laps">Laps</string>
    <string name="infants_in_seats">Seats</string>
    <string name="infants_under_two">Infants Under 2</string>
    <string name="max_one_infant_per_lap">There aren\'t enough adults (age 12+) to have infants sit in laps. They need their own seats.</string>
    <string name="in_laps">In Laps</string>
    <string name="in_seats">In Seats</string>
    <string name="infant_seating_preference">Seating Preference for Infants Under 2</string>
    <string name="infants_seating_preference_description">Will infants under age 2 (at time of flight) sit in laps or have their own seats?</string>
    <string name="infants_in_seats_prompt">Infants in seats need their own tickets. Let\'s search again for the infants\' tickets.</string>
    <string name="infants_in_laps_prompt">Infants in lap don\'t need their own tickets. We\'ll start a new search with fewer tickets.</string>
    <string name="stops">Stops</string>
    <string name="airlines">Airlines</string>
    <plurals name="x_Stops_TEMPLATE">
        <item quantity="zero">No Stops</item>
        <item quantity="one">%s Stop</item>
        <item quantity="two">%s Stops</item>
        <item quantity="few">%s Stops</item>
        <item quantity="many">%s Stops</item>
        <item quantity="other">%s Stops</item>
    </plurals>
    <string name="departure_airports">Departure Airports</string>
    <string name="arrival_airports">Arrival Airports</string>
    <string name="all_airports">All Airports</string>
    <string name="room_rate_per_night_template">%s/night</string>
    <string name="tablet_room_rate_resort_fees_template">Additional hotel fees for this stay: &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
    <string name="room_rate_button_add_to_trip">Add To Trip</string>
    <string name="room_rate_button_select_room">Select Room</string>
    <string name="n_reviews_TEMPLATE">%1$s reviews</string>
    <string name="n_recommend_TEMPLATE">%s%% recommend</string>
    <string name="sorry_rooms_sold_out">Sorry, all rooms are sold out on Expedia.</string>
    <string name="sold_out_on_expedia">Sold out on Expedia</string>
    <string name="photos_for_TEMPLATE">Photos for %s</string>
    <plurals name="n_rooms_left_TEMPLATE">
        <item quantity="zero">%s rooms left</item>
        <item quantity="one">%s room left</item>
        <item quantity="two">%s rooms left</item>
        <item quantity="few">%s rooms left</item>
        <item quantity="many">%s rooms left</item>
        <item quantity="other">%s rooms left</item>
    </plurals>
    <string name="reviews_for_TEMPLATE">Reviews for %1$s</string>
    <string name="submitted_by_on_date_TEMPLATE">%1$s on %2$s</string>
    <string name="flight_cities_TEMPLATE">%1$s to %2$s</string>
    <string name="flight_on_time_TEMPLATE">%s%% on time</string>
    <string name="round_trip">Round Trip</string>
    <string name="total_with_tax">Total</string>
    <string name="spinner_text_hotel_create_trip">Creating the trip ...</string>
    <string name="Checkout">Checkout</string>
    <string name="Create_a_Trip">Create a Trip</string>
    <string name="your_trip">Your Trip</string>
    <string name="now_booking_TEMPLATE">Now Booking &lt;b&gt;%1$s&lt;/b&gt;</string>
    <string name="room_and_bed_type_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt;, %2$s</string>
    <string name="facebook_weve_found_your_account">Hey &lt;b&gt;%1$s&lt;/b&gt;, looks like we\'ve found your Expedia account! Please enter your expedia password below to link your facebook and expedia accounts.</string>
    <string name="cabin_code_coach">Economy</string>
    <string name="cabin_code_premium_coach">Premium Economy</string>
    <string name="cabin_code_business">Business</string>
    <string name="cabin_code_first">First Class</string>
    <string name="only_if_applicable">Redress # (if applicable)</string>
    <string name="seating_preference">Seating Preference</string>
    <string name="special_assistance">Special Assistance</string>
    <string name="get_a_room">Get A Room</string>
    <string name="more_actions">More Actions</string>
    <string name="share_trip">Share via Email</string>
    <string name="add_to_calendar">Add to Calendar</string>
    <string name="add_to_flighttrack">Track with FlightTrack</string>
    <string name="add_insurance">Add Insurance</string>
    <string name="get_there">Get There</string>
    <string name="rules_and_restrictions">Rules and Restrictions</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="Terms_of_Booking">Terms of Booking</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="fare_information">FARE INFORMATION</string>
    <string name="map_search_button">Search Map</string>
    <string name="sort">Sort</string>
    <string name="switch_view">Switch View</string>
    <string name="sort_description_distance">Distance</string>
    <string name="sort_description_popular">Popularity</string>
    <string name="sort_description_price">Price</string>
    <string name="sort_description_deals">Deals</string>
    <string name="sort_description_rating">Rating</string>
    <string name="all">All</string>
    <string name="filter_stars_three">3+</string>
    <string name="filter_stars_four">4+</string>
    <string name="filter_stars_five">5</string>
    <string name="filter">Filter</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="cd_filter_hotels_for_three_or_more_stars">Press to filter for hotels with three or more stars</string>
    <string name="cd_filter_hotels_for_four_or_more_stars">Press to filter for hotels with four or more stars</string>
    <string name="cd_filter_hotels_for_five_stars">Press to filter for hotels with five stars</string>
    <string name="cd_filter_remove_hotel_star_filters">Press to remove hotel star filters</string>
    <string name="cd_filter_for_nearest_hotels">Press to filter for the nearest hotels within a small radius from your search location</string>
    <string name="cd_filter_for_further_distanced_hotels">Press to filter for hotels within a mid-distance radius from your search location</string>
    <string name="cd_filter_for_furthest_distanced_hotels">Press to filter for hotels within largest radius from your search location</string>
    <string name="cd_filter_remove_distance_filter">Press to clear all distance filters for hotel search</string>
    <string name="cd_filter_for_low_range_hotel_prices">Press to filter for low-range hotel prices</string>
    <string name="cd_filter_for_mid_range_hotel_prices">Press to filter for mid-range hotel prices</string>
    <string name="cd_filter_for_high_range_hotel_prices">Press to filter for high-range hotel prices</string>
    <string name="cd_filter_remove_hotel_price_filters">Remove hotel price filters</string>
</resources>