<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_select_sort"
        android:showAsAction="always|withText"
        android:title="@string/sort">
        <menu>
            <group
                android:id="@+id/menu_select_sort_group"
                android:checkableBehavior="single" >

                <item
                    android:id="@+id/menu_select_sort_popularity"
                    android:checked="true"
                    android:icon="@drawable/ic_sort_popular"
                    android:title="@string/sort_description_popular" />
                <item
                    android:id="@+id/menu_select_sort_deals"
                    android:icon="@drawable/ic_sort_deals"
                    android:title="@string/sort_description_deals" />
                <item
                    android:id="@+id/menu_select_sort_price"
                    android:icon="?attr/skin_hotelListingSortPriceDrawable"
                    android:title="@string/sort_description_price" />
                <item
                    android:id="@+id/menu_select_sort_user_rating"
                    android:icon="@drawable/ic_sort_user_rating"
                    android:title="@string/sort_description_rating" />
                <item
                    android:id="@+id/menu_select_sort_distance"
                    android:icon="@drawable/ic_sort_distance"
                    android:title="@string/sort_description_distance" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/menu_select_search_map"
        android:showAsAction="always|withText"
        android:title="@string/map_search_button" />
    <item
        android:id="@+id/menu_select_filter"
        android:showAsAction="always|withText"
        android:title="@string/filter" />
    <item
        android:id="@+id/menu_select_change_view"
        android:icon="@drawable/ic_menu_map"
        android:showAsAction="always"
        android:title="@string/switch_view" />
</menu>
