<?xml version="1.0" encoding="utf-8"?>
<com.mobiata.android.widget.SegmentedControlGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mobiata="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rating_filter_button_group"
    style="?attr/skin_hotelListingFilterGroupStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rating_low_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_hotels_for_three_or_more_stars"
        android:drawableBottom="@drawable/btn_filter_rating_light_low_star"
        android:drawablePadding="-6dp"
        android:text="@string/filter_stars_three"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rating_medium_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_hotels_for_four_or_more_stars"
        android:drawableBottom="@drawable/btn_filter_rating_light_medium_star"
        android:drawablePadding="-6dp"
        android:text="@string/filter_stars_four"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rating_high_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_hotels_for_five_stars"
        android:drawableBottom="@drawable/btn_filter_rating_light_high_star"
        android:drawablePadding="-6dp"
        android:text="@string/filter_stars_five"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/rating_all_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:checked="true"
        android:contentDescription="@string/cd_filter_remove_hotel_star_filters"
        android:text="@string/all"
        android:textStyle="bold" />

</com.mobiata.android.widget.SegmentedControlGroup>