<?xml version="1.0" encoding="utf-8"?>
<com.mobiata.android.widget.SegmentedControlGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mobiata="http://schemas.android.com/apk/res-auto"
    android:id="@+id/radius_filter_button_group"
    style="?attr/skin_hotelListingFilterGroupStyle"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/radius_small_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_for_nearest_hotels"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radius_medium_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_for_further_distanced_hotels"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radius_large_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:checked="true"
        android:contentDescription="@string/cd_filter_for_furthest_distanced_hotels"
        android:textStyle="bold" />

    <RadioButton
        android:id="@+id/radius_all_button"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:contentDescription="@string/cd_filter_remove_distance_filter"
        android:text="@string/all"
        android:textStyle="bold" />

</com.mobiata.android.widget.SegmentedControlGroup>