<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <com.expedia.bookings.widget.TextView
        android:id="@+id/get_a_room_text_view"
        style="@style/Confirmation.Header"
        android:text="@string/get_a_room"
        app:textStyle="light" />

    <View
        android:id="@+id/get_a_room_divider"
        style="@style/Confirmation.Divider.Header.Flight" />

    <TextView
        android:id="@+id/hotels_action_text_view"
        style="@style/Confirmation.Action"
        android:drawableLeft="@drawable/ic_bed"/>

    <include layout="@layout/itin_air_attach_card"
        android:id="@+id/air_attach_confirmation_banner"
        android:visibility="gone"/>

    <com.expedia.bookings.widget.TextView
        android:id="@+id/more_actions_text_view"
        style="@style/Confirmation.Header"
        android:layout_marginTop="16dp"
        android:text="@string/more_actions"
        app:textStyle="light" />

    <View style="@style/Confirmation.Divider.Header.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/share_action_text_view"
        style="@style/Confirmation.Action"
        android:drawableLeft="@drawable/ic_social_share"
        android:text="@string/share_trip" />

    <View
        android:id="@+id/ca_insurance_divider"
        style="@style/Confirmation.Divider.Action.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/ca_insurance_action_text_view"
        style="@style/Confirmation.Action"
        android:drawableLeft="@drawable/ic_insurance"
        android:text="@string/add_insurance" />

    <View
        android:id="@+id/calendar_divider"
        style="@style/Confirmation.Divider.Action.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/calendar_action_text_view"
        style="@style/Confirmation.Action"
        android:drawableLeft="@drawable/ic_calendar_add"
        android:text="@string/add_to_calendar" />

    <View
        android:id="@+id/vsc_app_divider"
        style="@style/Confirmation.Divider.Action.Flight"
        android:visibility="gone" />

    <include
        layout="@layout/vsc_train_confirmation_row"
        android:visibility="gone" />

    <View
        android:id="@+id/flighttrack_divider"
        style="@style/Confirmation.Divider.Action.Flight" />

    <com.expedia.bookings.widget.ConfirmationActionTextView
        android:id="@+id/flighttrack_action_text_view"
        style="@style/Confirmation.Action"
        android:drawableLeft="@drawable/ic_flight_track"
        android:text="@string/add_to_flighttrack" />

</merge>