<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp" >

        <TextView
            android:id="@+id/rules_and_restrictions"
            style="@style/LegalInformationHeader"
            android:text="@string/rules_and_restrictions" />

        <View style="@style/LegalInformationDivider.Grey" />

        <TextView
            android:id="@+id/terms_and_conditions"
            style="@style/LegalInformationHeader"
            android:text="@string/terms_and_conditions" />

        <View style="@style/LegalInformationDivider.Grey" />

        <TextView
            android:id="@+id/terms_of_booking"
            style="@style/LegalInformationHeader"
            android:text="@string/Terms_of_Booking" />

        <View
            android:id="@+id/terms_of_booking_divider"
            style="@style/LegalInformationDivider.Grey" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/LegalInformationHeader"
            android:text="@string/privacy_policy" />

        <View
            android:id="@+id/atol_information_divider"
            style="@style/LegalInformationDivider.Grey" />

        <TextView
            android:id="@+id/atol_information"
            style="@style/LegalInformationHeader"
            android:text="@string/lawyer_label_atol_information" />

        <TextView
            style="@style/LegalInformationTextView.Blue"
            android:text="@string/fare_information" />

        <View style="@style/LegalInformationDivider.Blue" />

        <TextView
            android:id="@+id/flight_rules_text_view"
            style="@style/LegalInformationTextView" />

        <TextView
            android:id="@+id/complete_penalty_rules_link_text_view"
            style="@style/LegalInformationTextView" />

        <TextView
            android:id="@+id/liabilities_link_text_view"
            style="@style/LegalInformationTextView" />

        <TextView
            android:id="@+id/additional_fee_text_view"
            style="@style/LegalInformationTextView" />

        <TextView
            android:id="@+id/lcc_text_view"
            style="@style/LegalInformationTextView"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>