<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v7.widget.Toolbar
        android:id="@+id/lx_rules_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lx_rules_toolbar"
        android:orientation="vertical">

        <!-- Rules & Restrictions -->
        <com.expedia.bookings.widget.TextView
            android:id="@+id/rules_and_restrictions"
            style="@style/LegalInformationHeader"
            android:text="@string/rules_and_restrictions" />
        <View style="@style/LegalInformationDivider.Grey" />

        <!-- Terms & Conditions -->
        <com.expedia.bookings.widget.TextView
            android:id="@+id/terms_and_conditions"
            style="@style/LegalInformationHeader"
            android:text="@string/terms_and_conditions" />
        <View style="@style/LegalInformationDivider.Grey" />

        <!-- Privacy Policy -->
        <com.expedia.bookings.widget.TextView
            android:id="@+id/privacy_policy"
            style="@style/LegalInformationHeader"
            android:text="@string/privacy_policy" />
        <View style="@style/LegalInformationDivider.Grey" />

        <!-- Cancellation Policy -->
        <com.expedia.bookings.widget.TextView
            android:id="@+id/cancellation_policy_header_text_view"
            style="@style/LegalInformationTextView.Blue"
            android:text="@string/cancellation_policy"
            android:textAllCaps="true"
            />
        <View
            android:id="@+id/cancellation_policy_divider"
            style="@style/LegalInformationDivider.Blue" />
        <com.expedia.bookings.widget.TextView
            android:id="@+id/cancellation_policy_text_view"
            style="@style/LegalInformationTextView" />

    </LinearLayout>


</merge>