<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.expedia.bookings.widget.traveler.TravelerEditText
        android:id="@+id/redress_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/only_if_applicable"
        android:inputType="number"
        android:maxLength="7"
        android:nextFocusForward="@id/first_name_input"
        android:singleLine="true"
        android:textSize="@dimen/traveler_input_text_size" />

    <com.expedia.bookings.widget.accessibility.AccessibleSpinner
        android:id="@+id/edit_assistance_preference_spinner"
        style="@style/FakeSpinner.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@android:color/white"
        android:textSize="@dimen/traveler_input_text_size"
        app:spinner_label="@string/special_assistance" />

    <com.expedia.bookings.widget.accessibility.AccessibleSpinner
        android:id="@+id/edit_seat_preference_spinner"
        style="@style/FakeSpinner.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@android:color/white"
        android:textSize="@dimen/traveler_input_text_size"
        app:spinner_label="@string/seating_preference" />
</merge>